--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Yasin Soliman by SecurityYasin</title>
+    <title>Yasin Soliman</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -19,10 +19,6 @@
       <header class="without-description">
         <h1>Yasin Soliman</h1>
         <p></p>
-        <p class="view"><a href="https://github.com/SecurityYasin">View the Project on GitHub <small>SecurityYasin</small></a></p>
-        <ul>
-          <li class="single"><a href="https://github.com/SecurityYasin/securityyasin.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>
       </header>
       <section>
         <h2>
@@ -32,7 +28,6 @@
       </section>
     </div>
     <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
