--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </header>
       <section>
         <h2>
-<a id="maintenance-announcement" class="anchor" href="#maintenance-announcement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Maintenance announcement</h2>
+<a id="maintenance-announcement" class="anchor" href="#maintenance-announcement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Maintenance announcement</h2>
 
-<p>Hello! Thanks for visiting SecurityYasin.com. I'm currently working on fixing a few glitches with the site.
+        <p>Hello! Thanks for visiting <b>SecurityYasin.com</b>. I'm currently fixing a few glitches with the site platform.
   <br/><br/>
   This is a temporary landing page, so please check back next week. Updates will be posted on my <a href="https://twitter.com/SecurityYasin">Twitter</a> profile.</p>
       </section>
